--- a/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmissionClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmissionClaimant.njk
@@ -24,8 +24,10 @@
 
 {% macro claimPartAdmittedToOweForClaimantDashboard(claim) %}
 
-  {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
-    {{ t('Waiting for the defendant to pay you.') }}
+  {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY
+     or claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE
+     or claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+    {{ t("Respond to the defendant's offer.") }}
   {% else %}
     {{ t('Respond to the defendant.') }}
   {% endif %}
