ROC-5265 Fix bug in dashboard status for partial admission
 - For partial admission, claimant accepts the defendant amount, we were forgetting a `| numeral` filter.
   This means the text would render as `John Smith accepted your admission of 30` instead of `John Smith accepted your admission of £30`

--- a/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmittedDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmittedDefendant.njk
@@ -9,7 +9,7 @@
 
 {% macro partAdmittedClaimantAcceptsDefendantDashboard(claim) %}
   {{ t('{{ claimantName }} accepted your admission of {{ amount }}',
-    { amount: claim.response.amount, claimantName: claim.claimData.claimant.name }) }}
+    { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name }) }}
 {% endmacro %}
 
 {% macro claimPartAdmittedAlreadyPaidForDefendantClaimDetails(claim) %}
