ROC-4696 Replace anchor links with macros (#1459)

--- a/src/main/features/claimant-response/views/confirmation.njk
+++ b/src/main/features/claimant-response/views/confirmation.njk
@@ -1,6 +1,7 @@
 {% extends "layout.njk" %}
 {% from "support.njk" import supportWidget %}
 {% from "externalLink.njk" import externalLink %}
+{% from "internalLink.njk" import internalLink %}
 
 {% set headingVisible = false %}
 {% set heading = 'Confirmation' %}
@@ -72,9 +73,9 @@
         <p>{{ t('A mediator will contact you and the defendant in the next 14 days to arrange an appointment.') }}</p>
       {% elseif claim.claimantResponse.type === ClaimantResponseType.REJECTION and claim.directionsQuestionnaireDeadline %}
         <p>
-          {{ t('You need to')}}
-          <a href="{{ DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId }) }}">
-            {{ t('complete a directions questionnaire form ')}}</a> {{ t('to tell us more about the claim.')}}
+          {{ t('You need to') }}
+          {{ internalLink(t('complete a directions questionnaire form'), DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId })) }}
+          {{ t('to tell us more about the claim.') }}.
         </p>
         <p>{{ t('Your claim won’t proceed if you don’t complete and return the form before {{ deadline }}.',
             { deadline: claim.directionsQuestionnaireDeadline | date }) }}
@@ -83,7 +84,7 @@
 
       {% include "includes/service_survey_link.njk" %}
 
-      <p><a class="button" href="{{ DashboardPaths.dashboardPage.uri }}">{{ t('Go to your account') }}</a></p>
+      <p>{{ internalLink(t('Go to your account'), DashboardPaths.dashboardPage.uri, 'button') }}</p>
 
       {{ supportWidget() }}
     </div>
