--- a/src/main/features/directions-questionnaire/views/hearing-exceptional-circumstances.njk
+++ b/src/main/features/directions-questionnaire/views/hearing-exceptional-circumstances.njk
@@ -5,14 +5,16 @@
 {% if party === MadeBy.CLAIMANT %}
   {% set courtName = 'Placeholder court name' %}
   {% set heading = t('The hearing will be held at {{ courtName }}?', { courtName: courtName }) %}
-{% elseif %}
+{% else %}
   {% set heading = t('The hearing will be held at the claimant’s chosen court') %}
 {% endif %}
 
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
-      <p>{{ t('The defendant chose this location.') }}</p>
+      {% if party === MadeBy.CLAIMANT %}
+        <p>{{ t('The defendant chose this location.') }}</p>
+      {% endif %}
       <form method="post" class="analytics-submit-event-trigger" data-event-action="DQ: Self Witness" data-event-label-from="selfWitness" novalidate>
         {{ csrfProtection(csrf) }}
 
