--- a/src/main/public/stylesheets/application.scss
+++ b/src/main/public/stylesheets/application.scss
@@ -27,6 +27,7 @@ $path: '/img/lib/';
 @import 'components/offer-table';
 @import 'components/income-expense-source';
 @import 'components/summary-table';
+@import 'components/date-picker';
 
 .notice {
   margin-bottom: 1.5rem;
