Remember form details after post

--- a/src/main/features/directions-questionnaire/views/hearing-dates.njk
+++ b/src/main/features/directions-questionnaire/views/hearing-dates.njk
@@ -8,33 +8,40 @@
   <script src="{{ asset_paths['js'] }}/lodash.js"></script>
   <script src="{{ asset_paths['js'] }}/bootstrap-datepicker.min.js"></script>
   <script src="{{ asset_paths['js'] }}/date-picker.js"></script>
-  <script language="JavaScript">
-
-  </script>
 {% endblock %}
 
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form novalidate method="post">
+      <form method="post" class="analytics-submit-event-trigger" data-event-action="DQ: Hearing Unavailability Dates" data-event-label-from="availability" novalidate>
         {{ csrfProtection(csrf) }}
         {{ radioGroup(
           name = 'hasUnavailableDates',
           options = [
-            { label: 'Yes', value: YesNoOption.YES.option },
-            { label: 'No', value: YesNoOption.NO.option }
+            { label: 'Yes', value: YesNoOption.YES.option, checked: form.valueFor('hasUnavailableDates').option === YesNoOption.YES.option },
+            { label: 'No', value: YesNoOption.NO.option, checked: form.valueFor('hasUnavailableDates').option === YesNoOption.NO.option }
           ],
           isInline = false,
           form = form,
           labelBold = false
         ) }}
-        {#<div>#}
         <div class="panel panel-border-narrow js-hidden" id="hasUnavailableDates-yes" aria-hidden="false">
           <h2 class="heading-medium">{{ t('Select the dates you can’t go to a hearing') }}</h2>
           <p>{{ t('These should only be the dates of important events like medical appointments, other court hearings or holidays.') }}</p>
           <div id="date-picker" class="datepicker"></div>
           <h2 class="heading-medium">Dates selected</h2>
           <dl id="dates-cant-attend-list" class="add-another-list">
+            {% for date in form.model.unavailableDates %}
+              <div id="add-another-list-items-{{ loop.index0 }}">
+                <dd class="add-another-list-item">
+                  <span data-index="items-{{ loop.index0 }}">{{ date }}</span>
+                  <input type="hidden" name="unavailableDates[{{ loop.index0 }}]" value="{{ date }}" />
+                </dd>
+                <dd class="add-another-list-controls">
+                  <a class="add-another-delete-link link" data-index="{{ loop.index0 }}">Remove</a>
+                </dd>
+              </div>
+            {% endfor %}
           </dl>
         </div>
         {{ submitButton() }}
